--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.dark{
+    background-color: #000;
+    color: #fff;
+}
 .article-container{
    display: flex;
    flex-wrap: wrap;
@@ -17,7 +20,7 @@
     display: flex;
     justify-content: center;
     margin: 24px;
-    color: rgb(0, 162, 255);
+    color: #0067ee;
 }
 a{
     text-decoration: none;
@@ -25,6 +28,9 @@ a{
 .loading{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100vh;
+}
+.loader{
+    margin: 12px;
 }
