--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,3 +34,20 @@ a{
 .loader{
     margin: 12px;
 }
+.pagesConfig{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 12px;
+}
+.pagesConfig > button{
+    padding: 5px;
+   background: rgb(0, 105, 190);
+   outline: none;
+   border-radius: 5px;
+   border: none;
+   color: #fff;
+}
+.pagesConfig > button:hover{
+    cursor: pointer;
+}
